--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "config-extend": "0.0.1",
     "moment": "~2.0.0",
     "cheerio": "~0.12.0",
-    "request": "~2.21.0"
+    "request": "~2.21.0",
+    "mime": "~1.2.9"
   }
 }
