--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spiderweb",
   "version": "0.0.1",
-  "description": "description",
+  "description": "Crawl multiple domains using one or more entry URLs.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
