--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spiderweb",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Crawl multiple domains using one or more entry URLs.",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,12 @@
     "website"
   ],
   "author": "James Hight",
-  "license": "Apache 2",
+  "licenses": [
+    {
+      "type": "Apache 2.0",
+      "url": "https://github.com/JamesHight/node-spiderweb/blob/master/LICENSE"
+    }
+  ],
   "readmeFilename": "README.md",
   "bugs": {
     "url": "https://github.com/JamesHight/node-spiderweb/issues"
